server/public/main.css
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Montserrat:wght@300;500;700&family=PT+Sans&family=Poppins:ital,wght@0,200;0,300;0,500;0,600;1,300&family=Roboto:ital,wght@0,300;0,500;1,500&display=swap');

body{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    background-color: rgb(255,255,255);
    
}

#body-home{
    display:grid;
    overflow: scroll;
    grid-template-columns: 0.18fr 1fr 1fr 1fr 1fr 0.18fr;
    grid-template-rows: auto auto auto auto;
    height: 100vh;
    grid-template-areas: 
    '. header header header header .'
    '. hero hero hero hero .'
    '. hero-img hero-img hero-img hero-img .'
    '. nav nav nav nav .';  
}

.header{
  grid-area: header;
  display: flex;
  position: relative;
  justify-content: space-between;
  align-items: flex-end;
}

.header::after{
  content: '';
  border-bottom: rgb(148,172,182) solid 2px;
  position: absolute;
  bottom: 0;
  width: 92%;
  right: 0%;

}

#logo{
  width: auto;
  height: 15vh; 
  z-index: 1000;
  margin-bottom: -15px;
}

.header-info{
  font-family: "Montserrat", sans-serif;
  font-size: smaller;
  font-weight: 500;
  color: rgb(188,189,193);
  display: flex;
  align-items: flex-end;
 
}

p{
  padding: 0;
  margin-bottom: 10px;
}

.hero{
  grid-area: hero;
  margin-top: 10px;

}



.hero-img{
  grid-area: hero-img;
  margin-bottom: 10px;
  height: 45vh;
}

#image-home{
  min-width: 100%;
  min-height: 100%;
  background-image: url('./images/home-pano02.jpg');
  background-size: cover;
}

.hero-title{
  font-family: "Montserrat", sans-serif;
  font-size: 4rem;
  font-weight: 700; 
  padding: 0;
  color: rgb(188,189,193);
  margin-bottom: 10px;
  margin-top: 10px;
}

.nav{
  grid-area: nav;
  height: 100%;
}

.nav__list{
  display: grid;
  padding: 0;
  list-style: none;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 25vh;
  grid-template-areas: 
  'training about kontakt workshops';
}

.nav__item{
  display: grid;
  align-items: center;
  justify-content: center;
}


#training{
  grid-area: training;
  background-color: rgb(248, 213,72);
  width: 100%;
}

#about{
  grid-area: about;
  background-color: rgb(147, 206,240);
  width: 100%;
}

#kontakt{
  grid-area: kontakt;
  background-color: rgb(158, 189,58);
  width: 100%;
}

#workshops{
  grid-area: workshops;
  background-color: rgb(236, 177,61);
  width: 100%;
}

.nav__link{
  text-decoration: none;
  color: rgb(255,255,255);
  font-family: "Roboto", sans-serif;
  font-size: 2.5rem;
}


@media (max-width: 1000px) {

  #body-home{
    display:grid;
    grid-template-columns: 0.1fr 1fr 1fr 0.1fr;
    grid-template-rows: auto auto auto auto auto;
    height: 100vh;
    grid-template-areas: 
    '. header header .'
    '. hero hero .'
    '. hero-img hero-img .'
    '. nav nav .';  
}

  .header{
    grid-area: header;
    height: fit-content;
  }
  
  .header::after{
    width: 90%;
  }
  
  #logo{
    height: 11vh; 
    margin-bottom: -12px;
  }
  
  .header-info{
    font-size: 0.9rem;
    font-weight: 500; 
  }
  
  p{
    margin-bottom: 5px;
  }
  
  .hero{
    grid-area: hero;
    margin-top: 30px;
    height: fit-content;
  
  }
  
  .hero-img{
    grid-area: hero-img;
    height: 38vh;
  }
  
  #image-home{
    min-width: 100%;
    min-height: 100%;
    background-image: url('./images/home-pano02.jpg');
    background-size: cover;
    background-position: center;
  }
  
  .hero-title{
    font-size: 2.8rem;
    margin-bottom: 10px;
    margin-top: 10px;
  }
  
  .nav{
    grid-area: nav;
  }
  
  .nav__list{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 25vh;
    grid-template-areas: 
    'training about kontakt workshops';
  }
  

  #training{
    grid-area: training;
    width: 100%;
  }
  
  #about{
    grid-area: about;
    width: 100%;
  }
  
  #kontakt{
    grid-area: kontakt;
    width: 100%;
  }
  
  #workshops{
    grid-area: workshops;
    width: 100%;
  }

  .nav__link{
    font-size: 1.8rem;
  }

}

@media (max-width: 850px) {

  #body-home{
    display:grid;
    grid-template-columns: 0.2fr 1fr 1fr 0.2fr;
    grid-template-rows: auto auto auto auto auto;
    height: 100vh;
    grid-template-areas: 
    '. header header .'
    '. hero hero .'
    '. hero-img hero-img .'
    '. nav nav .';  
}

  .header{
    grid-area: header;
    height: fit-content;
  }
  
  .header::after{
    width: 85%;
  }
  
  #logo{
    height: 9vh; 
    margin-bottom: -10px;
  }
  
  .header-info{
    font-size: 0.6rem;
    font-weight: 500; 
  }
  
  p{
    margin-bottom: 5px;
  }
  
  .hero{
    grid-area: hero;
    margin-top: 10px;
    height: fit-content;
  
  }
  
  .hero-img{
    grid-area: hero-img;
    margin-bottom: 10px;
    height: 34vh;
  }
  
  #image-home{
    min-width: 100%;
    min-height: 100%;
    background-image: url('./images/home-pano02.jpg');
    background-size: cover;
    background-position: center;
  }
  
  .hero-title{
    font-size: 2rem;
    margin-bottom: 10px;
    margin-top: 10px;
  }
  
  .nav{
    grid-area: nav;
  }
  
  .nav__list{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 20vh 20vh;
    grid-template-areas: 
    'training about'
    'kontakt workshops'; 
  }
  

  #training{
    grid-area: training;
    width: 100%;
  }
  
  #about{
    grid-area: about;
    width: 100%;
  }
  
  #kontakt{
    grid-area: kontakt;
    width: 100%;
  }
  
  #workshops{
    grid-area: workshops;
    width: 100%;
  }

  .nav__link{
    font-size: 1.8rem;
  }

}
/* ... */

